[gd_scene load_steps=3 format=3 uid="uid://dhypvn7rk8qfk"]

[ext_resource type="Script" path="res://scripts/game_menu.gd" id="1_1txv4"]

[sub_resource type="LabelSettings" id="LabelSettings_vtx1m"]
font_size = 32
outline_size = 2
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)

[node name="GameMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1txv4")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.433457, 0.374097, 0.16177, 0.490196)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_stretch_ratio = 0.5
theme_override_constants/separation = 0

[node name="PauseLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.14
text = "Game Paused"
label_settings = SubResource("LabelSettings_vtx1m")
horizontal_alignment = 1

[node name="ButtonsVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="ResumeButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsVBox"]
layout_mode = 2
text = "Resume"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsVBox"]
layout_mode = 2
text = "Quit Level"

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsVBox"]
layout_mode = 2
text = "Exit Game"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsVBox/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsVBox/QuitButton" to="." method="_on_quit_level"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsVBox/ExitButton" to="." method="_on_exit_button_pressed"]
